--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -3,5 +3,5 @@
 
 @import "{{ site.theme }}";
 .site-title {font-size: 50px;}
-.site-header {border: none;}
+.site-header {display: none;}
 .site-footer {display: none;}
